refactor(point): 포인트 원장을 도메인 서비스로 하강하고 core application 제거
포인트 잔액 변경과 이력 기록을 한 트랜잭션에서 함께 수행하는 5개 연산을 순수 POJO
도메인 서비스 PointLedgerService로 하강하고, infrastructure-module의
DomainServiceConfig에 빈으로 등록했다. 트랜잭션 경계는 호출자(order/payment/admin
command 서비스)가 선언한다.

조회는 infrastructure/point/query/PointQueryDao로 이관하고 PointHistoryResult·
PointBalanceResult·PointSearchCondition을 그 패키지로 옮겨, web-api/admin-api가
QueryDSL을 알지 않도록 했다. PointHistoryRepository는 save-only write 포트로
순수화했고, PointEventListener는 크로스커팅 리스너이므로 infrastructure로 옮겼다.
소비 모듈의 단일 facade PointService는 CQRS로 분해했다(admin은 Command/Query,
web은 쓰기 경로가 없어 Query만).

동작 변경: usePoints의 POINT_NOT_FOUND 예외 메시지가 상세 정보를 포함하도록
통일되었고 상세 메시지의 memberId 표기가 MemberId[value=1] → 1로 바뀌었다.
admin 잔액 응답의 memberId는 저장된 값이 아니라 요청 경로 변수를 반환한다
(조회 조건이 동일해 값은 항상 같다).

40-order/41-payment 작업 인계를 위해 PointLedgerService 시그니처와 트랜잭션 경계
주의사항을 tasks/22-point.md 하단에 기록했다.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>